[UPDATED] InfiniteCarousel replace use pf gap in .slider to padding in .slide to simulate the nativae gap in .slider, fixed weird jump animation behavior

--- a/src/components/ContactForm/styles.module.css
+++ b/src/components/ContactForm/styles.module.css
@@ -38,8 +38,8 @@
   font-size: 1.4rem;
 }
 .email_form > textarea {
-  min-width: 34rem;
-  width: 100% !important;
+  min-width: 32rem;
+  width: 100%!important;
   height: 22rem;
   resize: none;
 }
