--- a/src/components/InfiniteCarousel/styles.module.css
+++ b/src/components/InfiniteCarousel/styles.module.css
@@ -16,7 +16,6 @@
   height: 100%;
   width: fit-content;
   display: flex;
-  gap: 4rem;
 }
 .animated {
   -moz-animation: sliding var(--timing) infinite linear;
@@ -28,6 +27,7 @@
   -moz-animation: slidingToRight var(--timing) infinite linear;
   -webkit-animation: slidingToRight var(--timing) infinite linear;
   animation: slidingToRight var(--timing) infinite linear;
+  transition: 0.5s ease-out;
   direction: rtl;
 }
 .pausable:hover {
@@ -44,12 +44,18 @@
 }
 
 @keyframes sliding {
+  from {
+    -moz-transform: translateX(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
   to {
     -moz-transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
   }
 }
+
 @keyframes slidingToRight {
   from {
     -moz-transform: translateX(-50%);
