--- a/src/pages/About/styles.module.css
+++ b/src/pages/About/styles.module.css
@@ -39,7 +39,7 @@
 }
 .page_background {
   top: 0;
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
   height: 100vh;
   background: radial-gradient(
@@ -49,7 +49,7 @@
     #2c5364
   );
 }
-.page_background::after {
+/* .page_background::after {
   position: absolute;
   content: "";
   top: 0;
@@ -58,7 +58,7 @@
   height: 100%;
   background: linear-gradient(90deg, transparent 90%, #000000c5),
     linear-gradient(270deg, transparent 90%, #000000c5);
-}
+} */
 .page_background::before {
   position: absolute;
   content: "";
